# Creates

./: .gitignore  CMakeLists.txt  README.md  issue.md
include/GateProcessors/: objects.hpp
include/UIProcessor/Events/: EventProcessor.hpp
src/: main.cpp
src/.gate/: AdvanceComponents.cpp
src/GateProcessors/: GateInstance.cpp  Process.md  objects.hpp  test.cpp
src/ProjectInsrance/: main.hpp
src/ShapeDrawer/: ComponentDrawer.cpp  Shapes.hpp  basicShape.cpp
src/UIProcessor/: WindowManager.cpp
src/UIProcessor/Events/: EventProcessor.cpp  KeyEvents.hpp  TempName.cpp
src/UIProcessor/ShapeDrawer/: Shapes.hpp  basicShape.cpp
src/app/: config.hpp  event.cpp  event.hpp  globals.hpp  main.cpp
src/app/interface/res_handler/: Resource.hpp
src/app/interface/scene/: main_scene.cpp  scene.hpp  scenes.cpp
src/app/simulation/: objects.hpp  test.cpp
src/app/simulation/circuits/: CircuitInstance.cpp  Gate.cpp
src/gate/: AdvanceComponents.cpp  Components.hpp  Gates.cpp  Gates.hpp  gates.md
src/simulation/: objects.hpp
src/ui/events/: EventProcessor.cpp  EventProcessor.hpp
src/ui/shapes/: BasicShape.cpp  GlShapes.hpp  Shapes.hpp  basicShape.cpp  basicShape.hpp
src/util/: sfml_tools.hpp  time.hpp
